# Clawnetes

./: AGENTS.md  IMPLEMENTATION_PLAN.md  PLAN.md  WINDOWS_SUPPORT_PLAN.md  agent-task-plan.md  agent-task-progress.md  package-lock.json  temp_app.txt  temp_render.txt
.github/workflows/: build-windows.yml  build.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml
src-tauri/.clawhub/: lock.json
src-tauri/skills/1password/.clawhub/: origin.json
src-tauri/skills/filesystem/.clawhub/: origin.json
src-tauri/src/: main.rs
src/components/: ToolPolicyEditor.tsx
src/components/__tests__/: ToolPolicyEditor.test.tsx
src/presets/: agentPresets.ts  businessFunctionPresets.ts  modelsByProvider.ts
src/test/: LMStudioProvider.test.tsx  ModelsByProvider.test.ts  OllamaModelDetection.test.tsx  ProviderAuth.test.ts  SecretRef.test.tsx  ThinkingLevel.test.tsx  WhatsAppChannel.test.tsx  agentSessions.test.ts  businessFunctionPresets.test.ts  toolSelection.test.ts
src/types/: index.ts
src/utils/: agentSessions.ts  providerAuth.ts  toolSelection.ts
