[package]
name = "claw-setup"
version = "0.1.0"
description = "Native setup wizard for OpenClaw"
authors = ["AI Models Compass"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
rand = "0.8"
ssh2 = "0.9"
# Pin time to avoid rustc version issues
time = "=0.3.36"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
