[package]
name = "clawnetes"
version = "0.1.0"
description = "Native setup wizard for OpenClaw"
authors = ["AI Models Compass"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
rand = "0.8"
ssh2 = "0.9"
lazy_static = "1.4"
# Pin time to avoid rustc version issues
time = "=0.3.36"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["rt", "net", "time", "sync", "macros"] }
tokio-tungstenite = { version = "0.20" }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
